--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: githubflutterapp
+name: fluttergithubapp
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -27,7 +27,7 @@ dependencies:
   intl: ^0.16.0
   dio: ^3.0.3
   provider: ^3.0.0+1
-  cached_network_image: ^0.8.0
+  cached_network_image: ^2.2.0
   fluttertoast: ^3.0.3
   flukit: ^1.0.2
 
@@ -51,7 +51,8 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  assets:
+  - imgs/photo.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
